# Easy_ACC

./: .gitignore  ARCHITECTURE.md  Data_exploration.ipynb  Interface_2.py  README.md  app.py  bilan_énergétique.py  definition_scenario.py  functions.py  home_acc.py  import_consumers.py  import_producers.py  import_streamlit.py  infos_générales.py  producers_master.csv  project_mapping.md  projects.db  pyproject.toml  requirements.txt
ACC_data/: consumers.xlsx  grid.xlsx  producers.xlsx  tariffs.xlsx
Documentation/: Documentation_technique.docx  Guide_d'installation_et_de_démarrage.docx  Guide_d'utilisation.docx
navigation/: sidebar_bilan.py  sidebar_precalibrage.py
pages/bilan/: energie.py  financier.py
pages/precalibrage/: consommation.py  financier.py  general.py  parametres.py  production.py  projects_list.py
services/: data_aggregation.py  database.py  geolocation.py  models.py  pdf_generator.py  pvgis.py  state_serializer.py
services/curve_processing/: __init__.py  alignment.py  imputer.py  integration.py  io.py  resampler.py  utils.py  validator.py
services/curve_processing/tests/: test_pipeline.py
services/curve_standardizer/: __init__.py  formatters.py  parser.py  resampler.py  standardizer.py  test_curve_import.py  test_debug_parser.py  utils.py  validator.py
state/: init_state.py
utils/: helpers.py
