[project]
name = "easy-acc"
version = "0.1.0"
description = "Easy ACC : ALECOB Project"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.3.1",
    "numpy<2",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "plotly>=5.15.0",
    "scipy>=1.16.1",
    "streamlit>=1.25.0",
    "streamlit-folium>=0.20.0",
    "pyarrow~=12.0.1",
    "folium~=0.20.0",
    "openpyxl>=3.1.0",
    "geopy>=2.4.0",
    "pvlib>=0.10.0",
    "sqlalchemy>=2.0.46"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pytest>=8.4.1"
]
