[project]
name = "easy-acc"
version = "0.1.0"
description = "Easy ACC : ALECOB Project"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.3.1",
    "numpy<2",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "plotly>=5.15.0",
    "scipy>=1.16.1",
    "streamlit>=1.25.0",
    "streamlit-folium>=0.20.0",
    "pyarrow~=12.0.1",
    "folium~=0.20.0",
    "openpyxl>=3.1.0",
    "geopy>=2.4.0",
    "pvlib>=0.10.0",
    "sqlalchemy>=2.0.46",
    "branca==0.8.2",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "fonttools==4.61.1",
    "fpdf==1.7.2",
    "idna==3.11",
    "Jinja2==3.1.6",
    "kaleido==0.2.1",
    "MarkupSafe==3.0.3",
    "python-docx==1.2.0",
    "requests==2.32.5",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "xyzservices==2025.11.0",
    "pdfminer-six>=20260107",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pytest>=8.4.1"
]
